--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "my-v0-project",
+  "name": "quizzer-app",
   "version": "0.1.0",
   "private": true,
+  "description": "A modern quiz application with document management and search functionality",
   "scripts": {
-    "build": "echo 'no build script'"
-  }
+    "build": "echo 'Static site - no build needed'",
+    "dev": "python -m http.server 8000",
+    "start": "python -m http.server 8000"
+  },
+  "keywords": ["quiz", "education", "javascript", "vanilla-js"],
+  "author": "Ahmad Dawood",
+  "license": "MIT"
 }
